Fix alignment

--- a/shared/components/pages/StartPage.less
+++ b/shared/components/pages/StartPage.less
@@ -47,6 +47,7 @@
 
 .StartPage__input {
     width: 100%;
+    text-align: center;
 }
 
 .StartPage__poll-created {
